fixes scrollbar on lion

--- a/src/styles/quiet-scrollbars.css
+++ b/src/styles/quiet-scrollbars.css
@@ -21,6 +21,18 @@
  * 
  */
 
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
+
 /* Temporary implementation of unobtrusive scrollbars. 
    FUTURE: These currently rely on nonstandard WebKit styles, and don't have all the right behavior. 
    Longer-term, we'll need to implement custom scrollbars. */
